--- a/login.css
+++ b/login.css
@@ -11,6 +11,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     height: 100vh;
 }
 
@@ -242,8 +243,9 @@ h1 {
     z-index: 1;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
   }
   .main {
     display: grid;
@@ -252,7 +254,7 @@ h1 {
     align-items: center;
     text-align: center;
     margin-top: 0;
-    margin-top: 40%;
+    margin-top: 50%;
     margin-left: 13%;
   }
   
@@ -265,10 +267,10 @@ h1 {
     justify-content: center;
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
-    margin-top: -80%;
+    margin-top: -90%;
   }
   .img-container {
-    margin-top: 80%;
+    margin-top: 90%;
     max-width: 15%;
     margin-left: 45%;
   }
