--- a/login.css
+++ b/login.css
@@ -260,14 +260,13 @@ h1 {
   
   .container {
     position: absolute;
-    height: 100%;
+    height:20vh ;
     width: 100%;
     display: block;
     background : linear-gradient(to bottom  ,rgb(250, 145, 46) 70%,rgb(248, 164, 68) 15%,rgb(209, 207, 206) ,rgb(250, 247, 247));
     justify-content: center;
     border-bottom-left-radius: 10%;
     border-bottom-right-radius: 10%;
-    margin-top: -90%;
   }
   .img-container {
     margin-top: 90%;
