--- a/login.css
+++ b/login.css
@@ -220,7 +220,7 @@ h1 {
   flex: 1;
   justify-content: center;
   align-items: center;
-  margin: 60% 40% 0 35% ;
+  margin: 80% 40% 0 35% ;
   background: transparent;
   border-radius: 50%;
 }
@@ -256,20 +256,23 @@ h1 {
     margin-top: 0;
     margin-top: 50%;
     margin-left: 13%;
+    margin-bottom: 5%;
   }
   
   .container {
     position: absolute;
-    height:20vh ;
+    height:50vh;
     width: 100%;
+    margin-top: -30%;
     display: block;
-    background : linear-gradient(to bottom  ,rgb(250, 145, 46) 70%,rgb(248, 164, 68) 15%,rgb(209, 207, 206) ,rgb(250, 247, 247));
+    background : linear-gradient(to bottom ,orange);
     justify-content: center;
-    border-bottom-left-radius: 10%;
-    border-bottom-right-radius: 10%;
+    border-bottom-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+    box-shadow: 10px 10px 10px rgba(240,204,240,1.3);
   }
   .img-container {
-    margin-top: 90%;
+    margin-top: 30%;
     max-width: 15%;
     margin-left: 45%;
   }
