--- a/login.css
+++ b/login.css
@@ -261,18 +261,18 @@ h1 {
   
   .container {
     position: absolute;
-    height:50vh;
+    height:60vh;
     width: 100%;
-    margin-top: -30%;
+    margin-top: -40%;
     display: block;
-    background : linear-gradient(to bottom ,orange);
+    background : linear-gradient(to bottom ,rgb(255, 94, 0),orange, white);
     justify-content: center;
     border-bottom-left-radius: 20%;
     border-bottom-right-radius: 20%;
     box-shadow: 10px 10px 10px rgba(240,204,240,1.3);
   }
   .img-container {
-    margin-top: 30%;
+    margin-top: 40%;
     max-width: 15%;
     margin-left: 45%;
   }
