--- a/login.css
+++ b/login.css
@@ -261,9 +261,9 @@ h1 {
   
   .container {
     position: absolute;
-    height:60vh;
+    height:80vh;
     width: 100%;
-    margin-top: -40%;
+    margin-top: -50vh;
     display: block;
     background : linear-gradient(to bottom ,rgb(255, 94, 0),orange, white);
     justify-content: center;
@@ -272,7 +272,7 @@ h1 {
     box-shadow: 10px 10px 10px rgba(240,204,240,1.3);
   }
   .img-container {
-    margin-top: 40%;
+    margin-top: 70%;
     max-width: 15%;
     margin-left: 45%;
   }
