--- a/login.css
+++ b/login.css
@@ -256,7 +256,7 @@ h1 {
     margin-top: 0;
     margin-top: 50%;
     margin-left: 13%;
-    margin-bottom: 5%;
+    margin-bottom: auto;
   }
   
   .container {
@@ -265,14 +265,13 @@ h1 {
     width: 100%;
     margin-top: -50vh;
     display: block;
-    background : linear-gradient(to bottom ,rgb(255, 94, 0),orange, white);
-    justify-content: center;
+    background : linear-gradient(to bottom ,rgb(255, 94, 0),orange, rgb(173, 172, 172) );
     border-bottom-left-radius: 20%;
     border-bottom-right-radius: 20%;
     box-shadow: 10px 10px 10px rgba(240,204,240,1.3);
   }
   .img-container {
-    margin-top: 70%;
+    margin-top: 65%;
     max-width: 15%;
     margin-left: 45%;
   }
