--- a/login.css
+++ b/login.css
@@ -274,10 +274,12 @@ h1 {
     margin-top: 65%;
     max-width: 15%;
     margin-left: 45%;
+    z-index: 30;
   }
   h1 {
     font-size: 1em;
     margin-top: 0;
+    z-index: 30;
     max-width: 60%;
     margin-left: 22%;
   }
@@ -288,6 +290,7 @@ h1 {
     margin-left: 32%;
     margin-top: 0;
     padding-top: 0;
+    z-index: 30;
   }
   .signup {
     display: block;
