--- a/login.css
+++ b/login.css
@@ -255,23 +255,23 @@ h1 {
     text-align: center;
     margin-top: 0;
     margin-top: 50%;
-    margin-left: 13%;
-    margin-bottom: auto;
+    margin-left: 11%;
+    margin-bottom: 0;
   }
   
   .container {
-    position: absolute;
-    height:80vh;
+    position: fixed;
+    height:50vh;
     width: 100%;
-    margin-top: -50vh;
     display: block;
     background : linear-gradient(to bottom ,rgb(255, 94, 0),orange, rgb(173, 172, 172) );
     border-bottom-left-radius: 20%;
     border-bottom-right-radius: 20%;
-    box-shadow: 10px 10px 10px rgba(240,204,240,1.3);
+    border-top-right-radius: 0;
+    box-shadow: 10px 10px 10px rgba(70,70,70,1.3);
   }
   .img-container {
-    margin-top: 65%;
+    margin-top: 30%;
     max-width: 15%;
     margin-left: 45%;
     z-index: 30;
