--- a/login.css
+++ b/login.css
@@ -256,25 +256,25 @@ h1 {
     margin-top: 0;
     margin-top: 50%;
     margin-left: 11%;
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
   
   .container {
-    position: fixed;
-    height:30vh;
+    position: absolute;
+    height:40%;
     width: 100%;
     display: block;
     background : linear-gradient(to bottom ,rgb(255, 94, 0),orange, rgb(173, 172, 172) );
-    border-bottom-left-radius: 20%;
-    border-bottom-right-radius: 20%;
+    border-bottom-left-radius: 30%;
+    border-bottom-right-radius: 30%;
     border-top-right-radius: 0;
     box-shadow: 10px 10px 10px rgba(70,70,70,1.3);
   }
   .section {
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
   .img-container {
-    margin-top: 30%;
+    margin-top: 25%;
     max-width: 15%;
     margin-left: 45%;
     z-index: 30;
